Annotation accessibility first pass. Fix for annotatio truncation bug.

--- a/source/client/ui/explorer/styles.scss
+++ b/source/client/ui/explorer/styles.scss
@@ -404,6 +404,10 @@ $pad: $canvas-border-width + $main-menu-button-size + 8px;
     padding: 1px 0 2px 0;
     font-weight: bold;
     -webkit-tap-highlight-color: transparent;
+
+    &:focus-visible {
+      outline: none;
+    }
   }
 
   .sv-content {
